style(security): adopt getFirst over get(0) in two pipeline tests
Applied by the pre-commit profile's code rewriter during the end-of-phase
quality sweep. Both files are inside this plan's footprint; the rewrite
is mechanical and behaviour-preserving.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KtG76piPpv85843K82rNgo